--- a/styles/module/tudo.sass
+++ b/styles/module/tudo.sass
@@ -73,15 +73,18 @@
       .todo-item
         display: flex
         align-items: center
-        gap: 8px
-        padding: 8px 12px
-        background: var(--background-primary)
-        border: 1px solid var(--background-modifier-border)
+        gap: 2px
+        padding: 0px 8px
+        // background: var(--background-primary)
+        // border: 1px solid var(--background-modifier-border)
         border-radius: 4px
         transition: all 0.2s ease
         &:hover
-          transform: translateX(4px)
+          // transform: translateX(4px)
+          background: var(--background-primary)
           border-color: var(--interactive-accent)
+          .todo-delete-btn
+            visibility: visible
       
         .todo-checkbox
           width: 16px
@@ -98,19 +101,23 @@
         .todo-due-date
           font-size: 0.9em
           color: var(--text-muted)
-          padding: 2px 6px
+          padding: 2px
           border-radius: 4px
-          background: var(--background-modifier-border)
+          // background: var(--background-modifier-border)
+          transition: all 0.2s ease
           &.overdue
             color: var(--text-error)
-            background: var(--background-modifier-error)
+            // background: var(--background-modifier-error)
         
         .todo-delete-btn
+          visibility: hidden
           color: var(--text-muted)
           cursor: pointer
+          font-size: 12px
           padding: 4px
+          box-sizing: border-box
           border-radius: 4px
-        &:hover
-          color: var(--text-error)
-          background: var(--background-modifier-error)
+          &:hover
+            color: var(--text-error)
+            // background: var(--background-modifier-error)
 
